@@ -1,0 +1,12 @@
+# Configuratie voor Castricum College
+importdatamap=CC-ImportData
+exportfiltermap=CC-ExportFilter
+exportkladmap=CC-ExportKlad
+exportdatamap=CC-ExportData
+
+brin=01XX
+schoolnaam=Castricum College
+teamid_prefix=CC 2021
+teamnaam_prefix=CC 2021
+teamnaam_suffix=
+maakklassenteams=0
