@@ -1,0 +1,10 @@
+# Configuratie voor Castricum College
+importfiltermap=CC-importfilter
+importkladmap=CC-ImportKlad
+importdatamap=CC-ImportData
+
+magisterUser=gebruikersnaam
+magisterPass=Welkom01
+magisterUrl=https://castricum.swp.nl:8800/doc
+medewerker_id=csv_upn
+leerling_id=email
