@@ -1,17 +1,0 @@
-# Voorbeeld Teamsync.ini configuratiebestand
-datainvoermap=data_in
-datakladmap=data_temp
-datauitvoermap=data_uit
-
-magisterUser=PietjePuk
-magisterPass=Gehe!mWachtw00rd
-magisterUrl=https://castricum.swp.nl:8800/doc
-
-brin=33AB
-schoolnaam=Castricum College
-teamid_prefix=CC 2021
-teamnaam_prefix=CC
-teamnaam_suffix=2021
-maakklassenteams=0
-leerling_id=loginaccount
-medewerker_id=loginaccount
