@@ -1,2 +1,2 @@
-@PowerShell.exe -NoProfile -NoLogo -ExecutionPolicy Bypass -File "%~dp0\Import-Magister.ps1" -Inifile "teamsync.ini" 
-@PowerShell.exe -NoProfile -NoLogo -ExecutionPolicy Bypass -File "%~dp0\Export-SchoolDataSync.ps1" -Inifile "teamsync.ini" 
+@PowerShell.exe -NoProfile -NoLogo -ExecutionPolicy Bypass -File "%~dp0\Import-Magister.ps1" -Inifile "Import-Magister-Voorbeeld.ini" 
+@PowerShell.exe -NoProfile -NoLogo -ExecutionPolicy Bypass -File "%~dp0\Export-SchoolDataSync.ps1" -Inifile "Export-SchoolDataSync-Voorbeeld.ini" 
